fix mobile layout issues

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -34,8 +34,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.8rem;
-  margin-bottom: 6rem;
+  font-size: 1.7rem;
+  margin-bottom: 2rem;
 
   em {
     color: $red;
@@ -49,29 +49,30 @@ h2 {
 }
 
 h3 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
 }
 
 body {
   background: linear-gradient(180deg, $dark-grey, $darker-grey 30rem);
   color: $light-grey;
   font-family: $body-font;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.6;
   text-align: center;
 
   > main {
     max-width: 60rem;
     margin: 0 auto;
-    padding: 4rem 1rem 0;
+    padding: 2rem 1rem 0;
 
     > p {
-      margin-bottom: 6rem;
+      margin-bottom: 2rem;
     }
   }
 
   > footer {
     margin-top: 4rem;
+    padding: 0 1rem;
     color: $white;
 
     .logo {
@@ -99,8 +100,10 @@ body {
         max-width: $footer-width;
         margin: 2rem auto;
         display: flex;
+        flex-wrap: wrap;
 
         a {
+          min-width: 14rem;
           flex: 1;
         }
       }
@@ -142,6 +145,7 @@ body.error {
 }
 
 input {
+  min-width: 50%;
   flex: 1;
   border: none;
   border-radius: $border-radius;
@@ -158,6 +162,7 @@ input[type="submit"] {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   padding: 1.2rem;
+  -webkit-appearance: none;
 
   &:hover {
     cursor: pointer;
@@ -165,14 +170,16 @@ input[type="submit"] {
 }
 
 .petition {
-  margin-bottom: 6rem;
+  margin-bottom: 2rem;
   display: flex;
+  flex-wrap: wrap;
   color: $white;
   text-align: left;
 
   .left {
     flex: 6;
     margin-right: 2rem;
+    min-width: 100%;
   }
 
   .right {
@@ -183,6 +190,7 @@ input[type="submit"] {
     position: relative;
 
     .politician {
+      margin-bottom: 2rem;
       min-height: 24rem;
       border-radius: 1rem;
       background-position: center center;
@@ -280,41 +288,89 @@ button {
   background: $transparent-black;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  display: table;
 
-  .cell {
-    display: table-cell;
-    vertical-align: middle;
-  }
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    display: table;
 
-  .modal {
-    main {
-      border-radius: $border-radius $border-radius 0 0;
-      background-color: $near-black;
-      padding: 2rem;
-
-      h2 {
-        margin-top: 0;
-      }
+    .cell {
+      display: table-cell;
+      vertical-align: middle;
     }
 
-    footer {
-      background-color: #2a2a2a;
-      border-radius: 0 0 $border-radius $border-radius;
-      padding: 2rem;
+    .modal {
+      main {
+        border-radius: $border-radius $border-radius 0 0;
+        background-color: $near-black;
+        padding: 2rem;
 
-      .share {
-        display: flex;
-        flex-wrap: nowrap;
+        h2 {
+          margin-top: 0;
+        }
+      }
 
-        a {
-          flex: 3;
+      footer {
+        background-color: #2a2a2a;
+        border-radius: 0 0 $border-radius $border-radius;
+        padding: 2rem;
 
-          &:last-child {
-            flex: 2;
+        .share {
+          display: flex;
+          flex-wrap: wrap;
+
+          a {
+            min-width: 100%;
+            flex: 3;
+
+            &:last-child {
+              flex: 2;
+            }
           }
         }
       }
+    }
+  }
+}
+
+@media screen and (min-width: $large-phone) {
+  body {
+    font-size: 1.2rem;
+
+    > main {
+      padding: 4rem 1rem 0;
+
+      > p {
+        margin-bottom: 6rem;
+      }
+    }
+  }
+
+  h1 {
+    font-size: 2.8rem;
+    margin-bottom: 6rem;
+  }
+
+  h2 {
+  }
+
+  h3 {
+    font-size: 1.8rem;
+  }
+  
+  .petition {
+    margin-bottom: 6rem;
+
+    .left {
+      min-width: 0;
+    }
+  }
+
+  .overlay .modal footer .share {
+    flex-wrap: nowrap;
+
+    a {
+      min-width: 0;
     }
   }
 }
